Rest API implementation, unittests, CI config (#1, #11, #9)
